<resources>
    <string name="app_name">AlcoholEstimator</string>
    <string name="enter_data">Enter your data</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="save">save</string>
    <string name="toast_first_select_sex">select your sex to continue</string>
    <string name="intro_max_estimated_blood_alcohol_content">Max estimated blood alcohol content</string>
    <string name="dashboard">dashboard</string>
    <string name="add_a_drink">add a drink</string>
    <string name="settings">settings</string>
    <string name="default_blood_alcohol_content">0 g/l</string>
    <string name="light_beer">Light beer</string>
    <string name="_4_percentage">4%</string>
    <string name="_500ml">500 ml</string>
    <string name="_8_percentage">8%</string>
    <string name="strong_beer">Strong beer</string>
    <string name="_5_percentage">5%</string>
    <string name="regular_beer">Regular beer</string>
    <string name="alcohol_content_title">Alcohol content</string>
    <string name="size_title">Size</string>
    <string name="drink_title">Drink</string>
    <string name="_9_percentage">9%</string>
    <string name="spriz">Spriz</string>
    <string name="_300ml">300 ml</string>
    <string name="wine">Wine</string>
    <string name="_12_percentage">12%</string>
    <string name="_200ml">200 ml</string>
    <string name="generic_cocktail">Generic cocktail</string>
    <string name="_13_percentage">13%</string>
    <string name="_150ml">150 ml</string>
    <string name="shot">Shot</string>
    <string name="_40_percentage">40%</string>
    <string name="_40ml">40 ml</string>
    <string name="volume_ml">Volume (ml)</string>
    <string name="drink_description">Drink description</string>
    <string name="drink_type">Drink type</string>
    <string name="alcohol_content">Alcohol content (%)</string>
    <string name="enter_drink_name">enter drink name</string>
    <string name="enter_size_dink">enter size dink</string>
    <string name="enter_alcohol_content">enter alcohol content</string>
    <string name="add_custom_drink">Add custom drink</string>
    <string name="drink_finished_at">Drink finished at</string>
    <string name="add_drink">Add Drink</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_info">user info</string>
    <string name="number_of_drinks_in_the_last_24_hours">Number of drinks in the last 24 hours:</string>
    <string name="default_number_of_drinks_in_the_last_24_hours">0</string>
    <string name="delete_all_the_drinks">Delete all the drinks</string>
    <string name="skip_login">Skip LogIn</string>
    <string name="min_estimated_blood_alcohol_content">Min estimated blood alcohol content</string>
    <string name="change_user_data">Change user data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_drink">Delete Drink</string>
    <string name="last_drink">Last Drink</string>
    <string name="_00_00">00:00</string>
    <string name="your_last_drinks">Your last drinks:</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="_1_1">[1, 1]</string>
</resources>