<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SelectDrinkFragment">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dip"
            android:text="@string/drink_title"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dip"
                android:text="@string/alcohol_content_title"
                android:textColor="#000"
                android:textSize="20sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dip"
                android:text="@string/size_title"
                android:textColor="#000"
                android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/lightBeerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/light_beer"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/lightBeerAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_4_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/lightBeerSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_500ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/regularBeerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/regular_beer"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/regularBeerAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_5_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/regularBeerSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_500ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/strongBeerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/strong_beer"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/strongBeerAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_8_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/strongBeerSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_500ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/sprizButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/spriz"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/sprizAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_9_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/sprizSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_300ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/wineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/wine"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/wineAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_12_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/wineSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_200ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/generalCocktailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/generic_cocktail"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/generalCocktailAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_13_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/generalCocktailSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_150ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/shotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="start"
            android:padding="18dip"
            android:text="@string/shot"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/shotAlcoholButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_40_percentage"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <android.widget.Button
            android:id="@+id/shotSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="18dip"
            android:text="@string/_40ml"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.Button
            android:id="@+id/customDrinkButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="18dip"
            android:text="@string/custom_drink"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</TableLayout>